# chat

./: README.md
ChatServer/ChatServer/: AsioIOServicePool.h  CServer.cpp  ChatServer.cpp  ChatServer.vcxproj  ChatServer.vcxproj.filters  ChatServiceImpl.cpp  ChatServiceImpl.h  DistLock.h  RedisMgr.h  config.ini
ChatServer/ChatServer/x64/Debug/: ChatServer.exe.recipe
ChatServer2/ChatServer/: ChatGrpcClient.h  DistLock.cpp  LogicSystem.cpp  RedisMgr.cpp  config.ini  const.h  message.pb.cc  message.pb.h
ChatServer2/ChatServer/x64/Debug/: ChatServer.exe.recipe
GateServer/GateServer/: AsioIOServicePool.cpp  CServer.cpp  CServer.h  ConfigMgr.cpp  ConfigMgr.h  GateServer.cpp  GateServer.vcxproj  GateServer.vcxproj.filters  HttpConnection.cpp  HttpConnection.h  LogicSystem.cpp  LogicSystem.h  MysqlDao.cpp  MysqlDao.h  MysqlMgr.cpp  MysqlMgr.h  RedisMgr.cpp  RedisMgr.h  Singleton.h  StatusGrpcClient.h  VerifyGrpcClient.cpp  VerifyGrpcClient.h  config.ini  const.h  message.pb.h
GateServer/GateServer/x64/Debug/: GateServer.exe.recipe
StatusServer/: AsioIOServicePool.h  DistLock.cpp  DistLock.h  PropertySheet.props  PropertySheet1.props  RedisMgr.h  StatusServiceImpl.cpp  const.h  message.pb.cc
StatusServer/StatusServer/: StatusServer.cpp  StatusServer.sln  StatusServer.vcxproj  StatusServer.vcxproj.filters
StatusServer/StatusServer/StatusServer/x64/Debug/: StatusServer.exe.recipe  StatusServer.vcxproj.FileListAbsolute.txt
StatusServer/StatusServer/StatusServer/x64/Debug/StatusServer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  StatusServer.lastbuildstate  StatusServer.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
StatusServer/StatusServer/x64/Debug/: config.ini
VarifyServer/: config.json  email.js  package-lock.json  package.json  redis.js  server.js
chat/: CMakeLists.txt  adduseritem.h  adduseritem.ui  applyfriend.cpp  applyfriend.h  applyfriend.ui  applyfrienditem.ui  applyfriendpage.cpp  applyfriendpage.h  applyfriendpage.ui  bubbleframe.cpp  bubbleframe.h  chatdialog.cpp  chatdialog.h  chatdialog.ui  chatitembase.cpp  chatitembase.h  chatpage.cpp  chatpage.h  chatpage.ui  chatuserwid.ui  chatview.cpp  chatview.h  clickedbtn.h  clickedlabel.cpp  clickedoncelabel.h  contactuserlist.cpp  contactuserlist.h  conuseritem.ui  findsuccessdlg.cpp  findsuccessdlg.ui  friendlabel.cpp  friendlabel.ui  global.cpp  global.h  grouptipitem.ui  httpmgr.cpp  httpmgr.h  listitembase.cpp  listitembase.h  (+23 more)
